연락처 완료!

--- a/RentalService/app/src/main/res/layout/activity_info_detail.xml
+++ b/RentalService/app/src/main/res/layout/activity_info_detail.xml
@@ -3,33 +3,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/fragment_info_detail"
+    android:id="@+id/activity_info_detail"
     android:orientation="vertical"
     android:background="@color/white"
     android:clickable="true"
-    tools:context=".InfoDetailFragment">
-
-    <ImageButton
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:id="@+id/info_detail_btn"
-        android:src="@drawable/phone"
-        />
+    >
 
     <TextView
         android:id="@+id/info_detail_institution_name"
+        android:gravity="center_vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:text="사무소 이름"
         android:textSize="20dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         />
-    
+
     <TextView
         android:id="@+id/info_detail_institution_location"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
+        android:gravity="center_vertical"
         android:text="사무소 주소"
         android:textSize="20dp"
         android:layout_marginTop="20dp"
@@ -38,18 +33,44 @@
     <TextView
         android:id="@+id/info_detail_institution_number"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
+        android:gravity="center_vertical"
         android:text="사무소 번호"
         android:textSize="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="10dp"
         />
 
+    <LinearLayout
+        android:layout_marginTop="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Item Photo"
+            android:textSize="20dp"
+            android:gravity="center"
+            android:layout_weight="0.5"
+            />
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="4"
+            android:id="@+id/info_detail_add_photo"
+            android:src="@android:drawable/ic_input_add"
+            />
+    </LinearLayout>
+
     <GridView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="20dp"
-        android:id="@+id/info_detail_photo"/>
+        android:id="@+id/info_detail_photo">
+
+    </GridView>
 
 
 
