--- a/RentalService/app/src/main/res/layout/admin_activity_login.xml
+++ b/RentalService/app/src/main/res/layout/admin_activity_login.xml
@@ -4,12 +4,70 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
+    android:orientation="vertical"
     tools:context="activity.LoginActivity">
 
+    <EditText
+        android:id="@+id/login_id"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="ID/E-mail"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="50dp"
+        />
+
+    <EditText
+        android:id="@+id/login_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Password"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="20dp"
+        android:inputType="textPassword"
+        />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Login"
+            android:layout_marginTop="10dp"
+            android:layout_gravity="center"
+            android:id="@+id/login_button"
+            />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Join"
+            android:layout_marginTop="10dp"
+            android:layout_gravity="center"
+            android:id="@+id/join_button"
+            android:layout_marginLeft="20dp"
+            />
+    </LinearLayout>
+
+
+
     <com.facebook.login.widget.LoginButton
+        android:layout_marginTop="50dp"
         android:id="@+id/btn_facebook_login"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="비회원으로 시작하기"
+        android:layout_marginTop="70dp"
+        android:layout_gravity="center"
+        android:id="@+id/user_login"
+        />
 
 </LinearLayout>
