User 대여 신청 구현 절반

--- a/RentalService/app/src/main/res/layout/admin_activity_login.xml
+++ b/RentalService/app/src/main/res/layout/admin_activity_login.xml
@@ -67,7 +67,7 @@
         android:text="비회원으로 시작하기"
         android:layout_marginTop="70dp"
         android:layout_gravity="center"
-        android:id="@+id/user_login"
+        android:id="@+id/user_login_button"
         />
 
 </LinearLayout>
