--- a/RentalService/app/src/main/res/layout/user_fragment_rental.xml
+++ b/RentalService/app/src/main/res/layout/user_fragment_rental.xml
@@ -5,10 +5,26 @@
     android:layout_height="match_parent"
     tools:context=".fragment.UserRentalFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="vertical">
+
+        <SearchView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:queryHint="사무소 이름 또는 전화번호"
+            android:id="@+id/user_search_bar"
+            android:iconifiedByDefault="false"
+            />
+
+        <ListView
+            android:layout_marginTop="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/user_institution_list"
+            />
+
+    </LinearLayout>
 
 </FrameLayout>
