--- a/RentalService/app/src/main/res/layout/admin_fragment_rental.xml
+++ b/RentalService/app/src/main/res/layout/admin_fragment_rental.xml
@@ -3,12 +3,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RentalFragment">
+    tools:context="fragment.RentalFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="vertical">
+
+        <SearchView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:queryHint="사무소 이름 또는 전화번호"
+            android:id="@+id/admin_rental_detail_search_bar"
+            android:iconifiedByDefault="false"
+            />
+
+        <ListView
+            android:layout_marginTop="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/admin_rental_detail_list"
+            />
+
+    </LinearLayout>
 
 </FrameLayout>
