--- a/RentalService/app/src/main/res/layout/admin_listviewitem.xml
+++ b/RentalService/app/src/main/res/layout/admin_listviewitem.xml
@@ -4,35 +4,54 @@
     android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         android:orientation="horizontal">
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:id="@+id/list_item_name"
-        android:textSize="20dp"
-        android:layout_weight="1"
-        android:gravity="center_vertical"
-        android:layout_marginLeft="10dp"
-        />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:id="@+id/list_item_number"
-        android:textSize="20dp"
-        android:layout_weight="1"
-        android:gravity="center_vertical"
-        />
+        <ImageView
+            android:layout_width="130dp"
+            android:layout_height="match_parent"
+            android:paddingTop="15dp"
+            android:paddingBottom="15dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:src="@drawable/tools"
+            />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/text_linear"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:id="@+id/list_item_name"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                android:paddingTop="20dp"
+                android:fontFamily="@font/ngb"
+                android:text="hi hello how are you"
+                />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:id="@+id/list_item_number"
+                android:textSize="15dp"
+                android:text="hi hello how are you"
+                android:paddingTop="8dp"
+                android:fontFamily="@font/app_main_font"
+                />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:textSize="15dp"
+                android:id="@+id/list_item_location"
+                android:fontFamily="@font/app_main_font"
+                android:text="hi hello how are you"
+                />
+        </LinearLayout>
     </LinearLayout>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:textSize="20dp"
-        android:layout_marginLeft="10dp"
-        android:id="@+id/list_item_location"
-        />
 
 
 
