Rental Detail Admin 구현 완료

--- a/RentalService/app/src/main/res/layout/admin_rentaldetailitem.xml
+++ b/RentalService/app/src/main/res/layout/admin_rentaldetailitem.xml
@@ -2,37 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:id="@+id/rental_user_name"
-        android:textSize="20dp"
-        android:layout_weight="1"
-        android:gravity="center_vertical"
-        android:layout_marginLeft="10dp"
-        />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:id="@+id/rental_user_phone"
-        android:textSize="20dp"
-        android:layout_weight="1"
-        android:gravity="center_vertical"
-        />
-    </LinearLayout>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:textSize="20dp"
-        android:layout_marginLeft="10dp"
-        android:id="@+id/rental_location"
-        />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -40,7 +10,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:id="@+id/rental_item_name"
+            android:id="@+id/rental_item_date"
             android:textSize="20dp"
             android:layout_weight="1"
             android:gravity="center_vertical"
@@ -50,7 +20,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:id="@+id/rental_item_number"
+            android:id="@+id/rental_institution_name"
             android:textSize="20dp"
             android:layout_weight="1"
             android:gravity="center_vertical"
@@ -64,7 +34,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:id="@+id/rental_date"
+            android:id="@+id/rental_item_info"
             android:textSize="20dp"
             android:layout_weight="1"
             android:gravity="center_vertical"
@@ -81,12 +51,5 @@
             />
     </LinearLayout>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:textSize="20dp"
-        android:layout_marginLeft="10dp"
-        android:id="@+id/rental_comment"
-        />
 
 </LinearLayout>
