--- a/RentalService/app/src/main/res/layout/admin_activity_info_add.xml
+++ b/RentalService/app/src/main/res/layout/admin_activity_info_add.xml
@@ -5,7 +5,7 @@
     android:layout_width="300dp"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    tools:context=".InfoAddActivity">
+    tools:context="activity.InfoAddActivity">
 
     <TextView
         android:layout_width="match_parent"
