--- a/RentalService/app/src/main/res/layout/user_fragment_rental_info.xml
+++ b/RentalService/app/src/main/res/layout/user_fragment_rental_info.xml
@@ -3,12 +3,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.UserRentalInfoFragment">
+    tools:context="fragment.UserRentalFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="vertical">
+
+        <SearchView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:queryHint="전화번호를 입력 후 검색 버튼을 눌러주세요!"
+            android:id="@+id/user_rental_detail_search_bar"
+            android:iconifiedByDefault="false"
+            />
+
+        <ListView
+            android:layout_marginTop="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/user_rental_detail_list"
+            />
+
+    </LinearLayout>
 
 </FrameLayout>
