--- a/RentalService/app/src/main/res/layout/admin_activity_info_detail.xml
+++ b/RentalService/app/src/main/res/layout/admin_activity_info_detail.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,71 +9,79 @@
     android:clickable="true"
     >
 
-    <TextView
-        android:id="@+id/info_detail_institution_name"
-        android:gravity="center_vertical"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:text="사무소 이름"
-        android:textSize="20dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        />
-
-    <TextView
-        android:id="@+id/info_detail_institution_location"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:gravity="center_vertical"
-        android:text="사무소 주소"
-        android:textSize="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="10dp"/>
-
-    <TextView
-        android:id="@+id/info_detail_institution_number"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:gravity="center_vertical"
-        android:text="사무소 번호"
-        android:textSize="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="10dp"
-        />
-
     <LinearLayout
-        android:layout_marginTop="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        >
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Item Photo"
-            android:textSize="20dp"
-            android:gravity="center"
-            android:layout_weight="0.5"
-            />
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="4"
-            android:id="@+id/info_detail_add_photo"
-            android:src="@android:drawable/ic_input_add"
-            />
-    </LinearLayout>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/gallery_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbarFadeDuration="0"
-        android:scrollbarSize="5dp"
-        android:scrollbarThumbVertical="@android:color/darker_gray"
-        android:scrollbars="vertical"/>
+        android:orientation="vertical">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@drawable/borderline">
+            <TextView
+                android:id="@+id/info_detail_institution_name"
+                android:gravity="center_horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:text="사무소 이름"
+                android:textSize="25dp"
+                android:layout_marginTop="10dp"
+                android:fontFamily="@font/ngb"
 
+                />
 
-</LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/info_detail_institution_location"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:gravity="center_vertical"
+                    android:text="사무소 주소"
+                    android:textSize="20dp"
+                    android:layout_marginLeft="15dp"
+                    android:fontFamily="@font/app_main_font"
+                    />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/info_detail_institution_number"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:gravity="center_vertical"
+                android:text="사무소 번호"
+                android:textSize="20dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:fontFamily="@font/app_main_font"
+                />
+
+        </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/gallery_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scrollbarFadeDuration="0"
+            android:scrollbarSize="5dp"
+            android:scrollbarThumbVertical="@android:color/darker_gray"
+            android:scrollbars="vertical"/>
+    </LinearLayout>
+
+    <ImageView
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:id="@+id/info_detail_add_photo"
+        android:src="@drawable/picture"
+        android:scaleType="centerCrop"
+        android:paddingRight="20dp"
+        android:paddingBottom="20dp"
+        android:layout_gravity="bottom|end"
+        />
+
+</FrameLayout>
