갤러리 ui 변경 완료

--- a/RentalService/app/src/main/res/layout/admin_fragment_info.xml
+++ b/RentalService/app/src/main/res/layout/admin_fragment_info.xml
@@ -21,6 +21,7 @@
             android:queryHint="사무소 이름 또는 전화번호"
             android:id="@+id/search_bar"
             android:iconifiedByDefault="false"
+            android:fontFamily="@font/app_main_font"
             />
 
         <ListView
