--- a/RentalService/app/src/main/res/layout/user_fragment_rental.xml
+++ b/RentalService/app/src/main/res/layout/user_fragment_rental.xml
@@ -16,6 +16,7 @@
             android:queryHint="사무소 이름 또는 전화번호"
             android:id="@+id/user_search_bar"
             android:iconifiedByDefault="false"
+            android:fontFamily="@font/app_main_font"
             />
 
         <ListView
