--- a/RentalService/app/src/main/res/layout/admin_activity_info_gallery.xml
+++ b/RentalService/app/src/main/res/layout/admin_activity_info_gallery.xml
@@ -31,7 +31,9 @@
             android:layout_height="wrap_content"
             android:text="트랙터경운기"
             android:textAlignment="center"
-            android:gravity="center_horizontal" />
+            android:gravity="center_horizontal"
+            android:fontFamily="@font/app_main_font"
+            />
 
         <TextView
             android:id="@+id/count"
@@ -41,6 +43,7 @@
             android:text="(7대)"
             android:textAlignment="center"
             android:gravity="center_horizontal"
+            android:fontFamily="@font/app_main_font"
             />
     </LinearLayout>
 
