--- a/RentalService/app/src/main/res/layout/admin_activity_login.xml
+++ b/RentalService/app/src/main/res/layout/admin_activity_login.xml
@@ -11,7 +11,7 @@
         android:id="@+id/login_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="ID/E-mail"
+        android:hint="ID"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="50dp"
@@ -35,7 +35,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Login"
+            android:text="로그인"
             android:layout_marginTop="10dp"
             android:layout_gravity="center"
             android:id="@+id/login_button"
@@ -44,7 +44,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Join"
+            android:text="가입하기"
             android:layout_marginTop="10dp"
             android:layout_gravity="center"
             android:id="@+id/join_button"
