--- a/RentalService/app/src/main/res/menu/popup_info.xml
+++ b/RentalService/app/src/main/res/menu/popup_info.xml
@@ -2,10 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/info_edit"
-        android:title="Edit"
+        android:title="수정하기"
         />
     <item
         android:id="@+id/info_delete"
-        android:title="Delete"
+        android:title="삭제하기"
         />
 /></menu>
