--- a/RentalService/app/src/main/res/layout/admin_activity_main.xml
+++ b/RentalService/app/src/main/res/layout/admin_activity_main.xml
@@ -25,13 +25,17 @@
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        >
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
+            app:tabSelectedTextColor="@color/white"
+            app:tabBackground="@drawable/tab_layout"
+            app:tabIndicatorColor="@color/purple_700"
             android:layout_gravity="bottom"/>
 
     </androidx.viewpager.widget.ViewPager>
