--- a/RentalService/app/src/main/res/layout/admin_activity_comment.xml
+++ b/RentalService/app/src/main/res/layout/admin_activity_comment.xml
@@ -5,33 +5,38 @@
     android:layout_width="300dp"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:background="@color/white"
     tools:context="activity.AdminCommentActivity">
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:text="Rental Info"
-        android:textSize="25dp"
+        android:layout_height="40dp"
+        android:text="대여 정보"
+        android:textSize="20dp"
+        android:textColor="@color/white"
         android:gravity="center"
-        android:background="@android:color/holo_purple"/>
+        android:fontFamily="@font/ngb"
+        android:background="@color/purple_700"/>
 
     <TextView
         android:id="@+id/comment_user_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="신청자 이름: "
-        android:textSize="20dp"
+        android:textSize="15dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
+        android:fontFamily="@font/app_main_font"
         />
     <TextView
         android:id="@+id/comment_user_phone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="신청자 번호: "
-        android:textSize="20dp"
+        android:textSize="15dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
+        android:fontFamily="@font/app_main_font"
         />
 
     <TextView
@@ -39,9 +44,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="신청한 날짜: "
-        android:textSize="20dp"
+        android:textSize="15dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
+        android:fontFamily="@font/app_main_font"
         />
 
     <TextView
@@ -49,27 +55,30 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="사무소 이름: "
-        android:textSize="20dp"
+        android:textSize="15dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
+        android:fontFamily="@font/app_main_font"
         />
     <TextView
         android:id="@+id/comment_item_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="신청 물품: "
-        android:textSize="20dp"
+        android:textSize="15dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
+        android:fontFamily="@font/app_main_font"
         />
     <TextView
         android:id="@+id/comment_rental_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="대여 기간: "
-        android:textSize="20dp"
+        android:textSize="15dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
+        android:fontFamily="@font/app_main_font"
         />
     <LinearLayout
         android:layout_width="wrap_content"
@@ -80,16 +89,37 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="승인 상태: "
-            android:textSize="20dp"
+            android:textSize="15dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
+            android:fontFamily="@font/app_main_font"
             />
-        <Spinner
+
+        <FrameLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/comment_approval_spinner"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"/>
+            android:layout_height="match_parent"
+            >
+            <Spinner
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/comment_approval_spinner"
+                android:layout_marginLeft="10dp"
+                android:fontFamily="@font/app_main_font"
+                android:textColor="@color/black"
+                android:visibility="visible"
+                android:layout_marginTop="5dp"/>
+            <TextView
+                android:id="@+id/comment_approval_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="승인"
+                android:fontFamily="@font/app_main_font"
+                android:textSize="15dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                android:visibility="invisible"
+                />
+        </FrameLayout>
 
     </LinearLayout>
 
@@ -102,18 +132,39 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="커멘트: "
-            android:textSize="20dp"
+            android:textSize="15dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
+            android:fontFamily="@font/app_main_font"
             />
-        <EditText
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp"
-            android:id="@+id/comment_comment"
-            />
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="5dp"
+                android:textSize="15dp"
+                android:layout_marginRight="10dp"
+                android:id="@+id/comment_comment"
+                android:fontFamily="@font/app_main_font"
+                android:textColor="@color/black"
+                android:visibility="visible"
+                />
+            <TextView
+                android:id="@+id/comment_text_View"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="15dp"
+                android:fontFamily="@font/app_main_font"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                android:visibility="invisible"
+                />
+
+        </FrameLayout>
     </LinearLayout>
 
     <LinearLayout
@@ -127,6 +178,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/comment_save"
+            android:fontFamily="@font/app_main_font"
             />
 
     </LinearLayout>
