--- a/RentalService/app/src/main/res/layout/admin_activity_info_add.xml
+++ b/RentalService/app/src/main/res/layout/admin_activity_info_add.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="300dp"
+    android:background="@color/white"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     tools:context="activity.InfoAddActivity">
@@ -13,7 +14,8 @@
         android:text="사무소 추가"
         android:textSize="25dp"
         android:gravity="center"
-        android:background="@android:color/holo_purple"/>
+        android:textColor="@color/white"
+        android:background="@color/purple_700"/>
 
      <LinearLayout
          android:layout_width="match_parent"
