--- a/RentalService/app/src/main/res/layout/user_activity_main.xml
+++ b/RentalService/app/src/main/res/layout/user_activity_main.xml
@@ -32,6 +32,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
+            app:tabSelectedTextColor="@color/white"
+            app:tabBackground="@drawable/tab_layout"
+            app:tabIndicatorColor="@color/purple_700"
             android:layout_gravity="bottom"/>
 
     </androidx.viewpager.widget.ViewPager>
