--- a/RentalService/app/src/main/res/values/colors.xml
+++ b/RentalService/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#F8D016</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFF</color>
-    <color name="red">#DB2B30</color>
+    <color name="silver">#FFC0C0C0</color>
+    <color name="dark_gray">#FF808080</color>
     <color name="green">#17E209</color>
 </resources>
