로그인 ui, 유저 장비 신청 detail ui 변경

--- a/RentalService/app/src/main/res/layout/admin_activity_info_gallery.xml
+++ b/RentalService/app/src/main/res/layout/admin_activity_info_gallery.xml
@@ -17,6 +17,7 @@
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
             android:src="@drawable/contruction"
+            android:background="@drawable/ripple_just_effect"
             android:id="@+id/photo"
             />
     </LinearLayout>
