--- a/RentalService/app/src/main/res/layout/admin_activity_select_login.xml
+++ b/RentalService/app/src/main/res/layout/admin_activity_select_login.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -23,22 +23,78 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="비회원으로 시작하기"
-        android:layout_marginTop="70dp"
-        android:layout_gravity="center"
-        android:id="@+id/user_login_button"
-        />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:weightSum="1">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="0.35"
+            >
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                android:text="사용자 유형을 선택해주세요"
+                android:gravity="bottom|center">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="공무원으로 시작하기"
-        android:layout_marginTop="70dp"
-        android:layout_gravity="center"
-        android:id="@+id/admin_login_button"
-        />
+            </TextView>
+        </LinearLayout>
 
-</LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:gravity="bottom|center"
+            android:layout_weight="0.35">
+            <ImageButton
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:scaleType="centerCrop"
+                android:id="@+id/admin_login_button"
+                android:background="@drawable/ripple_effect"
+                android:src="@drawable/admin"/>
+
+            <ImageButton
+                android:layout_marginLeft="20dp"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:scaleType="centerCrop"
+                android:id="@+id/user_login_button"
+                android:background="@drawable/ripple_effect"
+                android:src="@drawable/builder"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:layout_weight="0.3"
+            android:weightSum="1">
+            <TextView
+                android:layout_marginLeft="30dp"
+                android:layout_width="match_parent"
+                android:layout_height="53dp"
+                android:text="공무원"
+                android:textSize = "15dp"
+                android:gravity="center"
+                android:layout_weight="0.5"
+                > </TextView>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="53dp"
+                android:text="사용자(대여신청)"
+                android:textSize = "15dp"
+                android:layout_weight="0.5"
+                android:layout_marginRight="30dp"
+                android:gravity="center"> </TextView>
+
+        </LinearLayout>
+    </LinearLayout>
+
+</FrameLayout>
