--- a/RentalService/app/src/main/res/layout/admin_gallery_add.xml
+++ b/RentalService/app/src/main/res/layout/admin_gallery_add.xml
@@ -15,6 +15,7 @@
             android:src="@drawable/contruction"
             android:layout_width="200dp"
             android:layout_height="200dp"
+            android:background="@drawable/ripple_just_effect"
             />
     </LinearLayout>
 
