--- a/RentalService/app/src/main/res/layout/user_activity_info_detail.xml
+++ b/RentalService/app/src/main/res/layout/user_activity_info_detail.xml
@@ -8,65 +8,69 @@
     android:background="@color/white"
     android:clickable="true"
     >
-
-    <TextView
-        android:id="@+id/user_info_detail_institution_name"
-        android:gravity="center_vertical"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:text="사무소 이름"
-        android:textSize="20dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        />
-
-    <TextView
-        android:id="@+id/user_info_detail_institution_location"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:gravity="center_vertical"
-        android:text="사무소 주소"
-        android:textSize="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="10dp"/>
-
-    <TextView
-        android:id="@+id/user_info_detail_institution_number"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:gravity="center_vertical"
-        android:text="사무소 번호"
-        android:textSize="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="10dp"
-        />
-
-
     <LinearLayout
-        android:layout_marginTop="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        >
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Item Photo"
-            android:textSize="20dp"
-            android:gravity="center"
-            />
-
-    </LinearLayout>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/user_gallery_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbarFadeDuration="0"
-        android:scrollbarSize="5dp"
-        android:scrollbarThumbVertical="@android:color/darker_gray"
-        android:scrollbars="vertical"/>
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@drawable/borderline">
+            <TextView
+                android:id="@+id/user_info_detail_institution_name"
+                android:gravity="center_horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:text="사무소 이름"
+                android:textSize="25dp"
+                android:layout_marginTop="10dp"
+                android:fontFamily="@font/ngb"
+
+                />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/user_info_detail_institution_location"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:gravity="center_vertical"
+                    android:text="사무소 주소"
+                    android:textSize="20dp"
+                    android:layout_marginLeft="15dp"
+                    android:fontFamily="@font/app_main_font"
+                    />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/user_info_detail_institution_number"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:gravity="center_vertical"
+                android:text="사무소 번호"
+                android:textSize="20dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:fontFamily="@font/app_main_font"
+                />
+
+        </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/user_gallery_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scrollbarFadeDuration="0"
+            android:scrollbarSize="5dp"
+            android:scrollbarThumbVertical="@android:color/darker_gray"
+            android:scrollbars="vertical"/>
+    </LinearLayout>
 
 
 
